# bullet

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.playwright-mcp/: page-2026-07-03T13-34-24-690Z.yml
backend/: package.json
backend/sql/: activity.sql  auth_lookup.sql  merkle_store.sql  notes_rls.sql
backend/src/: commitment.ts  email.ts  google.ts  index.ts  indexer.ts  invite.ts  leaves.ts  merkle_store.ts  oauth-utils.ts  pending.ts  poseidon.test.ts  poseidon.ts  prove.ts  resolver.test.ts  resolver.ts  session.ts  store.ts  supabase.ts  tree.test.ts  tree.ts  twitter.ts  verify.ts
circuits/: package.json
circuits/scripts/: build-claim.sh  convert-to-soroban.mjs  gen-test-proof.mjs  run-benchmark.sh
circuits/src/: claim.circom  compute_hashes.circom  preimage.circom
contracts/: Cargo.toml
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs  test.rs
contracts/zeekpay/: Cargo.toml
contracts/zeekpay/src/: groth16_fixture.rs  lib.rs  test.rs  verifier.rs
frontend/: next.config.ts  package.json
frontend/src/: middleware.ts
pipeline/: STATUS.md
pipeline/circom-circuit/: changes.md  review.md  spec.md  test-results.md
pipeline/e2e-demo/: changes.md  test-results.md
pipeline/frontend-claim/: changes.md  review.md  spec.md  test-results.md
pipeline/frontend-inbox/: changes.md  review.md  spec.md  test-results.md
pipeline/frontend-send/: changes.md  review.md  spec.md  test-results.md
pipeline/repo-scaffold/: changes.md  review.md  spec.md  test-results.md
pipeline/resolver-service/: changes.md  review.md  spec.md  test-results.md
pipeline/soroban-contract/: changes.md  review.md  spec.md  test-results.md
pipeline/verifier-benchmark/: changes.md  review.md  spec.md  test-results.md
pipeline/x-oauth-identity/: changes.md  (+3 more)
scripts/: set_vk.mjs
shared/: package.json
(+47 files in other folders)
