[package]
name = "verifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Pinned to 22.0.x: MSRV 1.79 (builds on the Homebrew rust 1.83 in this env) and
# the first series exposing the bls12_381 host functions (Protocol 22 / CAP-0059).
soroban-sdk = "=22.0.7"
# For the Poseidon-Merkle deposit-cost benchmark only: pure-wasm BLS12-381 Fr
# arithmetic (no host fn for Poseidon). Already present transitively as the host
# pairing backend; used directly here to measure on-chain Poseidon insert cost.
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ff = { version = "0.4", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "=22.0.7", features = ["testutils"] }
